--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.16.7",
+    "@types/fontkit": "^2.0.3",
     "@types/jest": "^27.4.0",
     "@types/react": "^17.0.52",
     "@types/react-dom": "^17.0.18",
