--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -61,7 +61,8 @@
     "jest-canvas-mock": "^2.3.1",
     "process": "^0.11.10",
     "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1"
+    "webpack-cli": "^5.1.4",
+    "worker-loader": "^3.0.8"
   },
   "jest": {
     "setupFiles": [
