Add cache clear.

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "postinstall": "./link-workspaces.sh",
     "clean": "npm run --workspaces clean",
     "lint": "npm run --workspaces lint",
-    "build": "npm run --workspaces clean && npm run --workspaces build",
+    "build": "npm cache clear && npm run --workspaces clean && npm run --workspaces build",
     "test": "npm run --workspaces test"
   },
   "devDependencies": {
