--- a/package.json
+++ b/package.json
@@ -28,12 +28,12 @@
     "postinstall": "./link-workspaces.sh",
     "clean": "npm run --workspaces clean",
     "lint": "npm run --workspaces lint",
-    "build": "npm cache clear && npm run --workspaces clean && npm run --workspaces build",
+    "build": "npm run --workspaces clean && npm run --workspaces build",
     "test": "npm run --workspaces test"
   },
   "devDependencies": {
     "@babel/core": "^7.24.5",
-    "@types/fontkit": "^2.0.7",
+    "@types/fontkit": "^1.8.0",
     "@types/jest": "^27.5.2",
     "@types/react": "^17.0.80",
     "@types/react-dom": "^17.0.25",
