--- a/package.json
+++ b/package.json
@@ -31,19 +31,5 @@
     "build": "npm run --workspaces clean && npm run --workspaces build",
     "test": "npm run --workspaces test"
   },
-  "devDependencies": {
-    "@babel/core": "^7.24.5",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0",
-    "babel-loader": "^8.3.0",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^8.10.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.8.8",
-    "rimraf": "^3.0.2",
-    "ts-loader": "^9.5.1",
-    "ts-prune": "^0.10.3",
-    "typescript": "^4.9.5",
-    "url-loader": "^4.1.1"
-  }
+  "devDependencies": {}
 }
