--- a/package.json
+++ b/package.json
@@ -31,5 +31,26 @@
     "build": "npm run --workspaces clean && npm run --workspaces build",
     "test": "npm run --workspaces test"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@babel/core": "^7.16.7",
+    "@types/fontkit": "^2.0.3",
+    "@types/jest": "^27.4.0",
+    "@types/react": "^17.0.52",
+    "@types/react-dom": "^17.0.18",
+    "@typescript-eslint/eslint-plugin": "^5.9.1",
+    "@typescript-eslint/parser": "^5.9.1",
+    "babel-loader": "^8.2.2",
+    "eslint": "^8.6.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "jest": "^27.4.7",
+    "prettier": "^2.3.2",
+    "rimraf": "^3.0.2",
+    "ts-jest": "^27.1.2",
+    "ts-jest-resolver": "^2.0.0",
+    "ts-loader": "^9.2.5",
+    "ts-prune": "^0.10.3",
+    "typescript": "^4.5.4",
+    "url-loader": "^4.1.1"
+  }
 }
