--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "postinstall": "./link-workspaces.sh",
     "clean": "npm run --workspaces clean",
     "lint": "npm run --workspaces lint",
-    "build": "npm run --workspaces clean && npm run --workspaces build",
+    "build": "npm run --workspaces clean && npm run build -w packages/common && npm run build -w packages/generator",
     "test": "npm run --workspaces test"
   },
   "devDependencies": {
